--- a/collaborative_filtering_recommender_system.ipynb
+++ b/collaborative_filtering_recommender_system.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c2b991c2-577b-4334-9933-e4c8bf2e8ac5",
+   "id": "fba9688c-e070-453e-9e5c-94a478ebaff4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,14 @@
     "from pyspark.sql.functions import col, collect_list\n",
     "from pyspark.ml.feature import StringIndexer\n",
     "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.sql import Row\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9e323701-8b3a-4116-9adc-c930fad5129e",
+   "id": "329c2aa1-a7d1-43b5-8e4a-ced40b3c7673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fdb2e97f-9926-485f-b236-a53951809489",
+   "id": "2790ce9b-912a-42ac-a6c5-75010f518ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,29 +52,27 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65b62702-fbd8-45ed-9704-bb3ade2d8100",
+   "id": "f9b8b873-c7a4-45d2-8e78-b31c160a4b4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "user_indexer = StringIndexer(inputCol=\"user_id\", outputCol=\"userIndex\")\n",
-    "book_indexer = StringIndexer(inputCol=\"book_id\", outputCol=\"bookIndex\")\n",
-    "\n",
+    "song_indexer = StringIndexer(inputCol=\"song_id\", outputCol=\"songIndex\")\n",
     "df = user_indexer.fit(df).transform(df)\n",
-    "df = book_indexer.fit(df).transform(df)"
+    "df = song_indexer.fit(df).transform(df)\n",
+    "df = df.withColumn(\"interaction\", col(\"songIndex\") * 0 + 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e03acbf9-3785-4c88-b19b-7ec8fc5dc471",
+   "id": "2bce5f1d-f076-42cb-9b8b-6d83732f64f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.withColumn(\"interaction\", col(\"bookIndex\") * 0 + 1)\n",
-    "\n",
     "als = ALS(\n",
     "    userCol=\"userIndex\",\n",
-    "    itemCol=\"bookIndex\",\n",
+    "    itemCol=\"songIndex\",\n",
     "    ratingCol=\"interaction\",\n",
     "    coldStartStrategy=\"drop\",\n",
     "    nonnegative=True,\n",
@@ -85,48 +84,62 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "21ec95c2-eaf7-4bc0-a708-7b215057d759",
+   "id": "f3da603d-dede-4ae5-b976-eda77c8d5011",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend_for_user_and_book(df_spark, target_user, target_book, top_n_users=3, top_n_songs=3):\n",
+    "def hybrid_recommendation(df_spark, als_model, user_id_str, target_book_id, top_n_users=5, top_n_songs=5):\n",
     "    user_books_df = df_spark.select(\"user_id\", \"book_id\").distinct()\n",
     "    user_books = user_books_df.groupBy(\"user_id\").agg(collect_list(\"book_id\").alias(\"books\"))\n",
     "    user_books_dict = {row[\"user_id\"]: set(row[\"books\"]) for row in user_books.collect()}\n",
     "\n",
-    "    if target_user not in user_books_dict:\n",
-    "        print(f\"User {target_user} not found.\")\n",
+    "    if user_id_str not in user_books_dict:\n",
+    "        print(f\"User {user_id_str} not found.\")\n",
     "        return []\n",
     "\n",
-    "    target_books = user_books_dict[target_user]\n",
-    "\n",
+    "    target_books = user_books_dict[user_id_str]\n",
     "    similarities = []\n",
     "    for other_user, books in user_books_dict.items():\n",
-    "        if other_user == target_user:\n",
+    "        if other_user == user_id_str:\n",
     "            continue\n",
     "        shared_books = len(target_books.intersection(books))\n",
     "        similarities.append((other_user, shared_books))\n",
     "\n",
     "    top_users = [u for u, _ in sorted(similarities, key=lambda x: x[1], reverse=True)[:top_n_users]]\n",
     "\n",
-    "    songs = df_spark.filter((col(\"user_id\").isin(top_users)) & (col(\"book_id\") == target_book)) \\\n",
-    "                    .select(\"song_id\").rdd.flatMap(lambda x: x).collect()\n",
+    "    filtered_songs_df = df_spark.filter((col(\"user_id\").isin(top_users)) & (col(\"book_id\") == target_book_id))\n",
+    "    song_list = filtered_songs_df.select(\"song_id\").rdd.flatMap(lambda x: x).collect()\n",
+    "    user_based_top_songs = set([s for s, _ in Counter(song_list).most_common(top_n_songs * 2)])\n",
     "\n",
-    "    top_songs = [s for s, _ in Counter(songs).most_common(top_n_songs)]\n",
-    "    return top_songs"
+    "    song_id_map = df_spark.select(\"song_id\", \"songIndex\").distinct()\n",
+    "    index_to_id = {row[\"songIndex\"]: row[\"song_id\"] for row in song_id_map.collect()}\n",
+    "\n",
+    "    user_index_row = df_spark.select(\"user_id\", \"userIndex\").distinct().filter(col(\"user_id\") == user_id_str).collect()\n",
+    "    if not user_index_row:\n",
+    "        print(f\"User {user_id_str} not found in ALS index.\")\n",
+    "        return []\n",
+    "\n",
+    "    user_index = user_index_row[0][\"userIndex\"]\n",
+    "    user_df = spark.createDataFrame([Row(userIndex=user_index)])\n",
+    "    als_recs = als_model.recommendForUserSubset(user_df, top_n_songs * 3)\n",
+    "    rec_indexes = [r[\"songIndex\"] for r in als_recs.collect()[0][\"recommendations\"]]\n",
+    "    als_song_ids = [index_to_id[idx] for idx in rec_indexes if idx in index_to_id]\n",
+    "\n",
+    "    final_recs = [song for song in als_song_ids if song in user_based_top_songs][:top_n_songs]\n",
+    "    return final_recs\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8629ed23-89a1-462b-bcef-4d086bd60b48",
+   "id": "973707ae-ef60-4897-b7ea-02bc437c452a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommended songs for user 'd902ea288f544c3a74f0fc247144223d' and book '1934': ['Happy X-mas', 'Guilty', 'White Mountain']\n"
+      "Recommended songs for user 'd902ea288f544c3a74f0fc247144223d' and book '1934': ['Guilty', 'White Mountain']\n"
      ]
     }
    ],
@@ -134,7 +147,7 @@
     "target_user = \"d902ea288f544c3a74f0fc247144223d\"\n",
     "target_book = \"1934\"\n",
     "\n",
-    "recommendations = recommend_for_user_and_book(df, target_user, target_book)\n",
+    "recommendations = hybrid_recommendation(df, als_model, target_user, target_book)\n",
     "print(f\"Recommended songs for user '{target_user}' and book '{target_book}': {recommendations}\")"
    ]
   }
